  categories plugin.

- Tick generators now get the whole axis rather than just min/max.

- Added processOffset and drawBackground hooks (suggested in issue 639).

- Added a grid "margin" option to set the space between the canvas edge
  and the grid.

Bug fixes

- Fix problem with null values and pie plugin (patch by gcruxifix,
  issue 500).
- Fix problem with threshold plugin and bars (based on patch by
  kaarlenkaski, issue 348).
- Fix axis box calculations so the boxes include the outermost part of
  the labels too.
- Fix problem with event clicking and hovering in IE 8 by updating
  Excanvas and removing previous work-around (test case by Ara
  Anjargolian).
- Fix issues with blurry 1px border when some measures aren't integer
  (reported by Ara Anjargolian).
- Fix bug with formats in the data processor (reported by Peter Hull,
  issue 534).
- Prevent i from being declared global in extractRange (reported by
  Alexander Obukhov, issue 627).


Flot 0.7
--------

API changes:

Multiple axes support. Code using dual axes should be changed from
using x2axis/y2axis in the options to using an array (although
backwards-compatibility hooks are in place). For instance,

  {
    xaxis: { ... }, x2axis: { ... },
    yaxis: { ... }, y2axis: { ... }
  }

becomes

  {
    xaxes: [ { ... }, { ... } ],
    yaxes: [ { ... }, { ... } ]
  }

Note that if you're just using one axis, continue to use the
xaxis/yaxis directly (it now sets the default settings for the
arrays). Plugins touching the axes must be ported to take the extra
axes into account, check the source to see some examples.

A related change is that the visibility of axes is now auto-detected.
So if you were relying on an axis to show up even without any data in
the chart, you now need to set the axis "show" option explicitly.

"tickColor" on the grid options is now deprecated in favour of a
corresponding option on the axes, so { grid: { tickColor: "#000" }}